cmake_minimum_required(VERSION 3.10)
project(GameApp VERSION 1.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_subdirectory(Libs)
add_executable(GameApp Main.cxx)
target_link_libraries(GameApp PUBLIC Character)
target_link_libraries(GameApp PUBLIC Player)
target_link_libraries(GameApp PUBLIC Enemy)
target_link_libraries(GameApp PUBLIC AWP)
target_link_libraries(GameApp PUBLIC MP9)
target_include_directories(GameApp PUBLIC "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/Libs}")